--- a/source/styles/index.scss
+++ b/source/styles/index.scss
@@ -1,6 +1,16 @@
 @import '~normalize.css';
+@import '@blueprintjs/core/src/blueprint.scss';
 @import url('https://fonts.googleapis.com/css?family=Nunito&display=swap');
 
 html {
   font-family: Nunito;
+}
+
+html, body {
+  width: 100%;
+  height: 100%;
+}
+
+#application {
+  height: 100%;
 }
