--- a/source/styles/index.scss
+++ b/source/styles/index.scss
@@ -14,3 +14,19 @@ html, body {
 #application {
   height: 100%;
 }
+
+::-webkit-scrollbar {
+  width: 8px;
+}
+
+::-webkit-scrollbar-track {
+  width: 8px;
+  border-radius: 4px;
+  background-color: rgba(0, 0, 0, .04);
+}
+
+::-webkit-scrollbar-thumb {
+  width: 10px;
+  border-radius: 4px;
+  background-color: rgb(194, 194, 194);
+}
