--- a/source/styles/index.scss
+++ b/source/styles/index.scss
@@ -1,6 +1,7 @@
 @import '~normalize.css';
 @import '@blueprintjs/core/src/blueprint.scss';
 @import url('https://fonts.googleapis.com/css?family=Nunito&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Rubik:400,500,700&display=swap');
 
 html {
   font-family: Nunito;
